--- a/src/App.css
+++ b/src/App.css
@@ -13,26 +13,29 @@ body {
 }
 
 .root {
+  position: relative;
   width: 100%;
   height: 100vh;
   overflow-y: scroll;
-  position: relative;
 }
 
-.root::before {
-  content: "";
-  position: absolute;
-  inset: 0;
-  background-image: url("./assets/logo.svg");
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-  opacity: 0.1;
-  z-index: -1;
-}
+/*.root::before {*/
+/*  content: "";*/
+/*  position: absolute;*/
+/*  inset: 0;*/
+/*  background-image: url("./assets/logo.svg");*/
+/*  background-size: contain;*/
+/*  background-repeat: no-repeat;*/
+/*  background-position: center;*/
+/*  opacity: 0.1;*/
+/*  z-index: -1;*/
+/*}*/
 
 .navbar {
   position: relative;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .status-active {
@@ -45,6 +48,13 @@ body {
   animation: blink 1s infinite;
 }
 
+/*.constd {*/
+/*  !*color: #198500;*!*/
+/*  !*color: #17ce00;*!*/
+/*  color: #bb00fa;*/
+/*  color: #ff1414;*/
+/*} */
+
 .status-disconnect {
   position: absolute;
   right: 20px;
@@ -56,7 +66,8 @@ body {
 }
 
 @keyframes blink {
-  0%, 100% {
+  0%,
+  100% {
     opacity: 1;
   }
   50% {
@@ -95,7 +106,7 @@ body {
   flex: 1;
   min-width: 200px;
   max-width: 216px;
-  height: 100px;
+  height: 80px;
   padding: 5px 10px;
   border-left: 1px solid #757575;
   border-bottom: 1px solid #757575;
@@ -104,6 +115,13 @@ body {
   position: relative;
 
   cursor: pointer;
+  transition: 0.3s;
+
+  &:hover {
+    cursor: pointer;
+    box-shadow: 0px 0px 14px 8px rgba(0, 0, 0, 0.2) inset;
+    /*box-shadow: 0px 0px 14px 8px rgba(0, 0, 0, 0.2);*/
+  }
 }
 
 .lastCell {
@@ -153,4 +171,20 @@ body {
   line-height: 0;
   z-index: 1;
   user-select: none;
+}
+
+.timer {
+  position: absolute;
+  transform: translate(-50%);
+  opacity: 0.2;
+  left: 50%;
+  top: 50%;
+  line-height: 0;
+  z-index: 0;
+
+  user-select: none;
+  font-family: "Archivo Black", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 18vw;
 }
