--- a/src/App.css
+++ b/src/App.css
@@ -12,11 +12,36 @@ body {
   font-style: normal;
 }
 
+a {
+  text-decoration: none;
+  color: black;
+}
+
+.custom-scrollbar {
+  scrollbar-width: thin;
+  scrollbar-color: #757575 transparent;
+}
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #757575;
+  border-radius: 4px;
+}
+
 .root {
   position: relative;
   width: 100%;
   height: 100vh;
   overflow-y: scroll;
+  overflow-x: clip;
 }
 
 /*.root::before {*/
@@ -110,7 +135,7 @@ body {
   flex: 1;
   min-width: 200px;
   max-width: 216px;
-  height: 70px;
+  height: 90px;
   padding: 5px 10px;
   border-left: 1px solid #757575;
   border-bottom: 1px solid #757575;
@@ -166,6 +191,35 @@ body {
 }
 
 .hot {
+  color: aqua;
+}
+
+.volume-low,
+.volume-medium,
+.large-volume,
+.max-volume {
+  position: absolute;
+  transform: translate(-50%);
+  line-height: 0;
+  opacity: 0.3;
+  left: 50%;
+  top: 50%;
+  font-size: 20px;
+}
+
+.volume-low {
+  color: #000000;
+
+}
+.volume-medium {
+  color: #019612;
+}
+
+.large-volume {
+  color: #f1bf1e;
+}
+
+.max-volume {
   color: aqua;
 }
 
